<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MSITian</string>

    <string name="bold" tools:ignore="ReferenceType">@font/latobold</string>
    <string name="light" tools:ignore="ReferenceType">@font/latolight</string>
    <string name="regular" tools:ignore="ReferenceType">@font/latoregular</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>
    <string name="order">Home</string>
    <string name="notice">Notice</string>
    <string name="faculty">Faculty</string>
    <string name="gallery">Gallery</string>
    <string name="about">About</string>
    <string name="maharaja_surajmal_institute_of_technology">Maharaja Surajmal Institute of Technology</string>
    <string name="about_college">This AICTE approved Institute under GGSIP University is ideally located in the Institutional area of  Janakpuri, New Delhi. It has a campus spread over eight acres of land with beautiful eco-friendly surroundings. Institute was earlier operating from four storey building of 6279 sq.m of built up area. Recently it has been shifted to a more spacious seven storeyed building with built up area of 9660 sq.m The institute has over a short span of time acquired and developed impressive infrastructure, expertise and resources for imparting high quality engineering education. The institute runs in two shifts - First/Morning shift and Second/Evening shift providing Bachelor of Technology in CSE, IT, ECE and EEE streams.</string>


    <string-array name="theme">
        <item>System Default</item>
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="get_otp">Get otp</string>
    <string name="_7217653341">123456789</string>
    <string name="_91">+91</string>
    <string name="enter_mobile_number">Enter Your Mobile Number</string>
    <string name="sent_otp">We will send you an OTP on this number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="please_enter_the_otp_sent_to_you">Please enter the code that was sent to</string>
    <string name="didn_t_recieve_the_otp">Didn\'t recieve the OTP ?</string>
    <string name="time">Time :</string>
    <string name="_12_10_2000">12-10-2000</string>
    <string name="date">Date :</string>
    <string name="_13_12">13:12</string>
    <string name="title">Title</string>
    <string name="address_n_c_4_janak_puri_new_delhi_110058">Address: \n C-4 Janak Puri, New Delhi-110058</string>
    <string name="contact_details">Contact Details</string>
    <string name="phone_no_n_011_45037193">Phone No: \n 011-45037193</string>
    <string name="email_n_director_msit_in">Email: \n director@msit.in</string>
    <string name="playground">Playground</string>
    <string name="library">Library</string>
    <string name="labs_and_workshops">Labs and Workshops</string>
    <string name="cafeteria">Cafeteria</string>
    <string name="neat_and_clean_classrooms">Neat and Clean Classrooms</string>
    <string name="green_college_campus">Green College Campus</string>
    <string name="welcome_to_msit">Welcome To MSIT</string>
    <string name="api_key">bae9ec14752f4690842311bd064c2e69</string>

</resources>