<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="8dp"
    app:strokeColor="@color/gray"
    app:strokeWidth="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtViewBranchName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="12dp"
            android:fontFamily="@string/bold"
            android:text="CSE"
            android:textColor="@color/textColor"
            android:textSize="@dimen/title_size2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtViewBranchDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtViewBranchName"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:fontFamily="@string/light"
            android:text="@string/about_college"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size" />


    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>