<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="10dp"
    app:strokeColor="@color/black"
    app:strokeWidth="0.5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/msit" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/notice"
                    android:textColor="@color/textColor"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/thin"
                        android:text="@string/date"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_size01" />

                    <TextView
                        android:id="@+id/txtViewDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/thin"
                        android:text="@string/_12_10_2000"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_size01" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/thin"
                        android:text="@string/time"
                        android:layout_marginStart="3dp"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_size01" />

                    <TextView
                        android:id="@+id/txtViewTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/thin"
                        android:text="@string/_13_12"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_size01" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/noticeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/text_margin"
            android:fontFamily="@font/regular"
            android:text="@string/title"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/noticeImage"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:src="@drawable/msit"
            android:scaleType="fitXY" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>