<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="none"
    android:overScrollMode="never"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".otp.MobileNumberActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/otpsend" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/regular"
            android:text="@string/otp_verification"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/regular"
            android:text="@string/sent_otp"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/regular"
            android:gravity="center"
            android:text="@string/enter_moile_number"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/background_box_mobile_number"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/_91"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/enterMobileNumber"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:background="@null"
                android:fontFamily="@font/regular"
                android:hint="@string/_7217653341"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBarSendingOtp"
                android:layout_gravity="center"
                android:visibility="gone"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGetOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:backgroundTint="@color/toolbar_color"
                app:cornerRadius="10dp"
                android:text="@string/get_otp" />
        </FrameLayout>


    </LinearLayout>

</ScrollView>

















